pregunta 6 - tests y build